Bug 349824 - Kronometer should be paused if the system is going to sleep
Summary: Kronometer should be paused if the system is going to sleep
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-02 11:55 UTC by Elvis Angelaccio
Modified: 2015-08-28 23:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-07-02 11:55:37 UTC
A running stopwatch should be paused if the system is going to suspension or hibernation.

Reproducible: Always

Steps to Reproduce:
1. Open Kronometer
2. Start the stopwatch
3. Suspend the system
4. Resume the system

Actual Results:  
The stopwatch is running.

Expected Results:  
The stopwatch should be in paused state.
Comment 1 Elvis Angelaccio 2015-07-03 22:03:29 UTC
Git commit c375a36f60459bbeea36ba1722936a957573b17f by Elvis Angelaccio.
Committed on 03/07/2015 at 21:58.
Pushed by elvisangelaccio into branch 'frameworks'.

Implement suspension awareness

Kronometer is now notified when the system is going to sleep, either by
suspension or hibernation. All the windows with a running stopwatch are then
paused. This feature works only on systemd/logind systems, at the moment.
FIXED-IN: 2.0.0

M  +18   -0    src/mainwindow.cpp
M  +6    -0    src/mainwindow.h

http://commits.kde.org/kronometer/c375a36f60459bbeea36ba1722936a957573b17f