Implement suspension awareness

Kronometer is now notified when the system is going to sleep, either by
suspension or hibernation. All the windows with a running stopwatch are then
paused. This feature works only on systemd/logind systems, at the moment.

BUG: 349824
FIXED-IN: 2.0.0